<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/report_problem"
        android:orderInCategory="100"
        android:title="@string/report_problem"
        app:showAsAction="never" />
    <item
        android:id="@+id/feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/rate"
        android:orderInCategory="100"
        android:title="@string/rate"
        app:showAsAction="never" />
</menu>
